[gd_scene load_steps=7 format=2]

[ext_resource path="res://testing/MainTestingScene.gd" type="Script" id=1]
[ext_resource path="res://addons/sound_engine/sound_lib/SoundLib.gd" type="Script" id=2]
[ext_resource path="res://testing/resources/KeyedSoundTest.tres" type="Resource" id=3]
[ext_resource path="res://addons/sound_engine/streams/KeyedAudioStreamPlayer.gd" type="Script" id=4]
[ext_resource path="res://testing/resources/impactMetal_000.ogg" type="AudioStream" id=5]
[ext_resource path="res://addons/subtitles/scenes/SubtitlesLayer.tscn" type="PackedScene" id=6]

[node name="MainTestingScene" type="Node"]
script = ExtResource( 1 )

[node name="SoundLib" type="Node" parent="."]
script = ExtResource( 2 )

[node name="impact_metal" type="AudioStreamPlayer" parent="SoundLib"]
stream = ExtResource( 5 )
script = ExtResource( 4 )
keyed_sound_resource = ExtResource( 3 )

[node name="impact_metal_no_key" type="AudioStreamPlayer" parent="SoundLib"]
stream = ExtResource( 5 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control"]
margin_left = 631.0
margin_top = 173.0
margin_right = 759.0
margin_bottom = 205.0
rect_min_size = Vector2( 128, 32 )
text = "Play Test Sound"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Control"]
margin_left = 663.0
margin_top = 292.0
margin_right = 824.0
margin_bottom = 324.0
rect_min_size = Vector2( 128, 32 )
text = "Play Test Sound No Key"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubtitlesLayer" parent="." instance=ExtResource( 6 )]

[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/Button2" to="." method="_on_Button2_pressed"]
